--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/smtpc.rs"
 
 [dependencies]
 docopt = "0.8"
+rust-ini = "0.10"
 serde = "1.0" # if you're using `derive(Deserialize)`
 serde_derive = "1.0" # if you're using `derive(Deserialize)`
 serde_json = "1.0.9"
