--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "main"
 version = "0.1.0"
-authors = ["amanjpro <amanj.sherwany@adgear.com>"]
+authors = ["amanjpro <http://www.amanj.me>"]
 
 [[bin]]
 name = "smtpd"
@@ -14,7 +14,7 @@ path = "src/smtpc.rs"
 [dependencies]
 docopt = "0.8"
 rust-ini = "0.10"
-serde = "1.0" # if you're using `derive(Deserialize)`
-serde_derive = "1.0" # if you're using `derive(Deserialize)`
+serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0.9"
 common = { path = "../common" }
