--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/smtpc.rs"
 [dependencies]
 docopt = "0.8"
 rust-ini = "0.10"
+secstr = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0.9"
