--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -11,19 +11,12 @@ path = "src/smtpd.rs"
 name = "smtpc"
 path = "src/smtpc.rs"
 
-[[bin]]
-name = "test"
-path = "src/lib.rs"
-
-
-
 [dependencies]
 docopt = "0.8"
 rust-ini = "0.10"
-native-tls = "0.1"
-base64 = "0.9.0"
 secstr = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0.9"
 common = { path = "../common" }
+esmtp-client = { path = "../esmtp-client" }
