--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -18,4 +18,4 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0.9"
 common = { path = "../common" }
-esmtp-client = { path = "../esmtp-client" }
+esmtp_client = { path = "../esmtp-client" }
