--- a/esmtp-client/Cargo.toml
+++ b/esmtp-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "esmtp_client"
-version = "3.1.0-SNAPSHOT"
+version = "3.0.1"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
