--- a/esmtp-client/Cargo.toml
+++ b/esmtp-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "esmtp_client"
-version = "4.0.0"
+version = "4.1.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
