--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common"
-version = "3.1.0-SNAPSHOT"
+version = "4.0.0"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
