--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - cargo update
   - cargo build --target=x86_64-apple-darwin --release
   - cargo build --target=x86_64-unknown-linux-gnu --release
-  - OPENSSL_LIB_DIR=/tmp/openssl-1.0.1t/ OPENSSL_INCLUDE_DIR=/tmp/openssl-1.0.1t/include cargo build --target=armv7-unknown-linux-gnueabihf --release
+  - OPENSSL_LIB_DIR=/tmp/openssl-1.1.1/ OPENSSL_INCLUDE_DIR=/tmp/openssl-1.1.1/include cargo build --target=armv7-unknown-linux-gnueabihf --release
 before_deploy:
   - bash ci/prepare-deploy.sh
 deploy:
