--- a/esmtp-client/Cargo.toml
+++ b/esmtp-client/Cargo.toml
@@ -3,7 +3,10 @@ name = "esmtp_client"
 version = "4.1.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
 
+[features]
+vendored = ["native-tls/vendored"]
+
 [dependencies]
-native-tls = "0.1"
+native-tls = "0.2"
 base64 = "0.9.0"
 secstr = "0.3.0"
