--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,6 +4,7 @@ version = "4.1.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
+secstr = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 rust-ini = "0.10"
