--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,12 +4,10 @@ version = "4.1.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
-secstr = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 rust-ini = "0.10"
 docopt = "1.0"
 dirs = "1.0"
-rust-crypto = "0.2"
+ring = "0.13"
 rand = "0.5"
-
