Restructure the project, for easier navigation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ["esmtp-client",
-           "main",
-           "common"]
+members = ["protocol",
+           "common",
+           "main"]
