--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common"
-version = "4.1.1"
+version = "4.2.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
