--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["amanjpro <http://www.amanj.me>"]
 vendored = ["native-tls/vendored"]
 
 [dependencies]
+log = "0.4"
 native-tls = "0.2"
 base64 = "0.9.0"
