--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common"
-version = "0.2.0-SNAPSHOT"
+version = "0.1.0-beta1"
 authors = ["amanjpro <http://www.amanj.me>"]
 
 [dependencies]
