--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -16,6 +16,7 @@ fs2 = "0.4"
 log = "0.4"
 log4rs = "0.8"
 dirs = "1.0"
+native-tls = "0.2"
 rand = "0.5"
 common = { path = "../common" }
 protocol = { path = "../protocol" }
