Extract 're' variable to a static variable

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -9,5 +9,6 @@ vendored = ["native-tls/vendored"]
 [dependencies]
 log = "0.4"
 native-tls = "0.2"
+lazy_static = "1.2"
 regex = "1"
 base64 = "0.10"
