--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -2,6 +2,7 @@
 name = "common"
 version = "0.2.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
+edition = '2018'
 
 [dependencies]
 serde = "1.0"
