--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -2,6 +2,7 @@
 name = "main"
 version = "0.2.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
+edition = '2018'
 
 [[bin]]
 name = "rusmtpd"
