--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -2,6 +2,7 @@
 name = "protocol"
 version = "0.2.0-SNAPSHOT"
 authors = ["amanjpro <http://www.amanj.me>"]
+edition = '2018'
 
 [features]
 vendored = ["native-tls/vendored"]
